--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#f21111"
-backgroundColor="#0e1117"
-secondaryBackgroundColor="#31333F"
-textColor="#fafafa"
-font="sans serif"
+primaryColor="#29B5E8"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#D4F0FA"
+textColor="#000000"
+font="monospace"
